name:              asblballondoxygene
version:           0.0.0
cabal-version:     >= 1.8
build-type:        Simple

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Model
                     Settings
                     Settings.StaticFiles
                     Handler.Admin
                     Handler.Albums
                     Handler.StaticPages

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                FlexibleInstances
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveDataTypeable
                TupleSections
                RecordWildCards
                ScopedTypeVariables
                ViewPatterns

    build-depends: base                         >= 4            && < 5
                 , yesod                        >= 1.4.2        && < 1.5
                 , yesod-core                   >= 1.4.15       && < 1.5
                 , yesod-static                 >= 1.5.0.2      && < 1.6
                 , yesod-form                   >= 1.4.4.1      && < 1.5
                 , classy-prelude               >= 0.10.2
                 , classy-prelude-conduit       >= 0.10.2
                 , classy-prelude-yesod         >= 0.10.2
                 , bytestring                   >= 0.9          && < 0.11
                 , text                         >= 0.11         && < 2.0
                 , persistent                   >= 2.2          && < 3
                 , persistent-sqlite            >= 2.2          && < 3
                 , persistent-template          >= 2.1.3.4      && < 3
                 , template-haskell
                 , shakespeare                  >= 2.0          && < 2.1
                 , hjsmin                       >= 0.1          && < 0.2
                 , monad-control                >= 0.3          && < 0.4
                 , wai-extra                    >= 3.0          && < 3.1
                 , yaml                         >= 0.8          && < 0.9
                 , http-conduit                 >= 2.1          && < 2.2
                 , directory                    >= 1.1          && < 1.3
                 , warp                         >= 3            && < 3.2
                 , data-default
                 , aeson                        >= 0.6          && < 0.10
                 , conduit                      >= 1.0          && < 2.0
                 , monad-logger                 >= 0.3          && < 0.4
                 , fast-logger                  >= 2.1.4        && < 2.5
                 , wai-logger                   >= 2.1          && < 2.2
                 , file-embed

                 , conduit-extra                >= 1.1.0        && < 2
                 , filepath                     >= 1.3.0.1      && < 2
                 , friday                       >= 0.2.2.0      && < 0.3
                 , friday-devil                 >= 0.1.1.1      && < 0.2

executable         asblballondoxygene
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , asblballondoxygene
                     , yesod

    ghc-options:       -threaded -O2
